Fixed layout issues
Fixed changes after main was not merged into this branch correctly by Github, and some layout changes had disappeared.

--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .tool-bar {
   position: fixed;
-  background: rgb(0, 0, 0);
-  border: 3px solid red;
+  background: rgb(14, 12, 12);
+  border: 1px solid rgb(199, 39, 39);
   font-family: "Noto Sans JP", sans-serif;
   list-style: none;
   font-size: 20px;
@@ -40,8 +40,7 @@ nav {
 
 .bar2 h2 {
   margin-left: 0 0 0 0;
-  text-shadow: 2px 2px white;
-  color: red;
+  color: rgb(199, 39, 39);
 }
 
 .bar3 li {
@@ -61,10 +60,11 @@ nav {
 }
 
 #logo-text h2 {
-  font-family: "Fascinate";
-  letter-spacing: 2px;
-  font-size: 32px;
+  font-family: "Anton";
+  letter-spacing: 5px;
+  font-size: 40px;
   margin: 0;
+  margin-left: 10px;
 }
 
 #clear:hover {
@@ -94,8 +94,9 @@ nav {
   margin-right: 10px;
   border: none;
   background: none;
-  color: red;
+  color: rgb(221, 22, 22);
 }
+
 .navbar-toggler:hover {
   color: rgb(253, 253, 253);
 }
